# Run

./: .gitignore  CMakeLists.txt  README.md  logo.psd  main.c  rules.xcf  synchro-codeblocks.bat
codeblocks/: Run.cbp  Run.depend  Run.layout  SDLTEST.depend  SpaceShooter.cbp  SpaceShooter.depend  SpaceShooter.layout  body.h  game.c  game.h  main.c  world.c  world.h
include/: body.h  game.h  world.h
include/SDL2/: SDL_haptic.h
src/: body.c  body.h  game.c  main.c  testing.c  world.c
